<resources>
    <string name="app_name">Move It</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_info">Info</string>
    <string name="title_events">Events</string>

    <string name="notification_channel_default_id">default</string>
    <string name="notification_channel_location_id">location</string>
    <string name="notification_channel_location_name">Location check</string>
    <string name="notification_channel_default_name">Domyślne</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="push_notification">Push notification</string>
    <string name="set_alarm">set alarm</string>
    <string name="get_location">Get Location</string>
    <string name="move_event">move event</string>
    <string name="send_email">send email</string>
    <string name="manual">Manual</string>
    <string name="auto_move">Auto Move</string>
    <string name="ai_move">Smart move</string>
    <string name="location">location</string>
    <string name="name">name</string>
    <string name="end_time">End time</string>
    <string name="start_time">Start time</string>
    <string name="choose_the_time">Choose the start time of next event</string>
    <string name="choose_the_time_AI">Choose the end time of missed event</string>
    <string name="move_it_action">Move it!</string>
    <string name="info_move">Fill information below to move next event</string>
    <string name="move_it_app_info">Move it App can change date
        of your calendar\'s events when you miss one of them
    </string>
    <string name="move_it_app_action">Click button below to start work with app</string>
</resources>
