<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MoveEventActivity">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/event_info_layout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"

                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:ems="10"
                    android:id="@+id/eventName"
                    android:hint="@string/name"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_end_time"
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/eventEnd"
                    android:ems="6"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/end_time"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_location"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_name"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:id="@+id/eventLocation"
                    android:hint="@string/location"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
                android:text="Next event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nextEventLabel"
                android:textColor="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_location"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nextEventLabel">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/nextEventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:ems="10"
                    android:focusableInTouchMode="false"
                    android:hint="@string/name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_start_time_next"
                android:layout_width="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/input_layout_location_next"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/nextEventStart"
                    android:ems="6"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/start_time"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_location_next"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_name_next"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:id="@+id/nextEventLocation"
                    android:hint="@string/location"/>
        </android.support.design.widget.TextInputLayout>


    </android.support.constraint.ConstraintLayout>


    <View
            android:id="@+id/separatr"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/event_info_layout"
            android:background="@android:color/darker_gray"/>

    <TextView
            android:text="@string/info_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/action_info"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/separatr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"/>
    <Switch
            android:text="@string/ai_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/switch1"
            app:layout_constraintTop_toBottomOf="@+id/action_info"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <EditText
            android:id="@+id/chooseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="clickTimePicker"
            android:focusableInTouchMode="false"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@+id/moveItBtn"
            app:layout_constraintTop_toBottomOf="@+id/switch1"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/choose_the_time"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:id="@+id/move_button"
            android:background="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:text="@string/move_it_action"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="moveEvent"
    />
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_directions_walk_primary_24dp"
            android:id="@+id/imageWalk"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/imageBike"
            android:background="@null"
            android:visibility="gone"
            android:onClick="selectTravelMode"
            android:padding="5dp"
            android:tag="1"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/chooseTime"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/move_button"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_directions_bike_primary_24dp"
            android:id="@+id/imageBike"
            android:visibility="gone"
            android:background="@null"
            android:onClick="selectTravelMode"
            app:layout_constraintStart_toEndOf="@+id/imageWalk"
            app:layout_constraintEnd_toStartOf="@+id/imageTransit"
            android:padding="5dp"
            android:tag="2"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/chooseTime" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/move_button"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_directions_transit_primary_24dp"
            android:id="@+id/imageTransit"
            android:visibility="gone"
            android:background="@null"
            android:onClick="selectTravelMode"
            android:padding="5dp"
            android:tag="3"
            app:layout_constraintStart_toEndOf="@+id/imageBike"
            app:layout_constraintEnd_toStartOf="@+id/imageCar"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/chooseTime" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/move_button"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectTravelMode"
            android:tag="4"
            app:srcCompat="@drawable/ic_directions_car_primary_24dp"
            app:layout_constraintStart_toEndOf="@+id/imageTransit"
            android:id="@+id/imageCar"
            android:visibility="gone"
            android:background="@null"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/chooseTime"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/move_button"/>

</android.support.constraint.ConstraintLayout>